# jra-scr

./: .gitignore  README.md  pyproject.toml
docs/: 00_成果物戦略と開発フロー.md  07_Superpowers拡張構成と運用シミュレーション.md  08_必要資料一覧と適用フロー.md  09_フロー適用シミュレーション.md  10_口頭プロンプトベースの進め方サンプル.md  11_現実的なマイクロセッション型フローサンプル.md  12_協調モードと自律モードの拡張案.md  13_auto_progress最小実装とシミュレーション結果.md  14_HITLスキル再設計と実シミュレーション結果.md  15_小規模アプリでのHITLシミュレーション.md  16_小規模実地検証_tiny_counter.md  17_簡単な回し方.md  18_HITL拡張スキル総まとめ.md  nakaana_self_learning_agent_spec.md  requirements.md
docs/jra/: 00_成果物計画.md  01_プロジェクト概要.md  02_アーキテクチャ.md  03_設計判断.md  04_利用ガイド.md  05_API仕様.md  06_スクレイピングと運用注意.md  07_現在地と次の一手.md  08_実装タスクと優先順位.md  09_進捗管理.md  10_netkeiba利用ガイド.md  11_netkeiba_odds_combination_usage.md  13_netkeiba_analysis_sqlite_usage.md
docs/sample/: 00_ドキュメント目次.md  01_中学生向け_プロジェクトの仕組み.md  02_アーキテクチャ.md  03_設計判断.md  04_セキュリティ.md  05_マルチプロバイダ化_設計と実装計画.md  06_利用ガイド.md  07_コントリビューションガイド.md  CLAUDE.md  CONTRIBUTING.md
docs/superpowers/: 2026-03-22-hitl-min-demo-progress-summary.md  2026-03-22-jra-restored-progress-summary.md  2026-03-22-jra-task-board.json  2026-03-22-jra-task-board.md  2026-03-22-progress-summary.md  (+2 more)
tests/: conftest.py  test_analysis_collector.py  test_analysis_maintenance.py  test_analysis_store.py  test_api.py  test_auto_progress.py  test_batch.py  test_cache.py  test_cli.py  test_extractors.py  test_hitl_tiny_counter.py  test_navigation.py  test_netkeiba_extractors.py  test_normalization.py  test_provider.py  test_service.py  test_service_historical_meeting_fallback.py  test_service_result_enrichment.py
(+112 files in other folders)
